# aoc23

./: .gitignore  README.md  get_first_input.sh
01_clj/: CHANGELOG.md  project.clj
01_clj/src/app/: core.clj
02_py_typed/: pyproject.toml
02_py_typed/src/aoc23/: __main__.py  app.py
02_py_typed/src/aoc23.egg-info/: PKG-INFO
08_clj/: project.clj
08_clj/src/app/: core.clj
