[project]
name = "aoc23"
version = "0.0.0"
dependencies = []

[project.optional-dependencies]
dev = [
        "black",
        "isort",
        "flake8",
        "mypy",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
aoc23 = "aoc23.app:main"
